# python_for_data_science

./: README.md
Starting/env/: pyvenv.cfg
Starting/ex00/: Hello.py
Starting/ex01/: format_ft_time.py
Starting/ex02/: find_ft_type.py  tester.py
Starting/ex03/: NULL_not_found.py  tester.py
Starting/ex04/: whatis.py
Starting/ex05/: building.py
Starting/ex06/: filterstring.py  ft_filter.py
Starting/ex07/: sos.py
Starting/ex08/: Loading.py  tester.py
Starting/ex09/: README.md  pyproject.toml
Starting/ex09/ft_package/: countlist.py
Starting/ex09/tests/: test.py
